<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <TextView
            android:id="@+id/tv_exercise_title"
            style="@style/ExercisePlanTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="레그프래스" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_exercise_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_delete_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_exercise_plan_cycle"
            style="@style/ExercisePlanBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/exercise_plan_cycle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_exercise_title" />

        <EditText
            android:id="@+id/et_exercise_plan_cycle"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"
            android:gravity="end|center_vertical"
            android:hint="@string/edit_cycle"
            android:inputType="number"
            android:lines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_exercise_close" />

        <TextView
            android:id="@+id/tv_exercise_plan_weight"
            style="@style/ExercisePlanBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/exercise_plan_weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_exercise_plan_cycle" />

        <EditText
            android:id="@+id/et_exercise_plan_weight"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"
            android:gravity="end|center_vertical"
            android:hint="@string/edit_weight"
            android:inputType="number"
            android:lines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_exercise_plan_cycle" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>