<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="hasSchedule"
            type="Boolean" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/btn_calendar_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/show_previous_month"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_chevron_left_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_date_display_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@id/btn_calendar_next"
                app:layout_constraintStart_toEndOf="@id/btn_calendar_prev"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="2022 8월" />

            <ImageView
                android:id="@+id/btn_calendar_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                android:contentDescription="@string/show_next_month"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_chevron_right_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_date_display_date"
                app:spanCount="7"
                tools:listitem="@layout/item_day" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/ButtonBold"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:text="@string/today_exercise_list"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/rv_calendar"
                app:visible="@{!hasSchedule}" />

            <TextView
                android:id="@+id/tv_exercise_rv_title"
                style="@style/ExerciseListTitle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:background="@color/gray4"
                android:gravity="center"
                android:text="@string/exercise_rv_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_calendar"
                app:visible="@{hasSchedule}" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_exercise_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_exercise_rv_title"
                app:visible="@{hasSchedule}"
                tools:listitem="@layout/item_today_exercise" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>